--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -36,7 +36,7 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:src="@android:color/holo_orange_dark"
-                    android:transitionName="@string/shared_item"
+                    android:transitionName="@string/shared_img_view"
                     />
 
             </FrameLayout>
